Sign in CSS 추가리

--- a/signin/index.html
+++ b/signin/index.html
@@ -30,6 +30,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <link rel="stylesheet" href="/css/common.css"/>
+  <link rel="stylesheet" href="/css/signin.css"/>
   
   <script defer src="/js/common.js"></script>
 </head>
@@ -388,7 +389,7 @@
           정기적으로 비밀번호를 변경하세요!
         </p>
       </form>
-      <div class="signin__actions">
+      <div class="actions">
         <a href="javascript:void(0)" class="signin_action">회원가입</a>
         <a href="javascript:void(0)" class="signin_action">아이디 찾기</a>
         <a href="javascript:void(0)" class="signin_action">비밀번호 찾기</a>
